Add initial state

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Fabric connectivity for the Star Citizen universe.",
   "main": "services/StarCitizen.js",
   "scripts": {
+    "coverage": "c8 npm test",
+    "report:install": "rm -rf node_modules && echo \"\n\" > package-lock.json && echo \"$ npm i\" > reports/install.log && npm i >> reports/install.log",
+    "report:todo": "grep --exclude package.json --exclude-dir=.env --exclude-dir=.git --exclude-dir=_book --exclude-dir=stores --exclude-dir=assets --exclude-dir=node_modules --exclude-dir=reports --exclude-dir=coverage --exclude-dir=docs --exclude-dir=libraries -rEI \"TODO|FIXME\" . | sed 's/\\([^:]*:\\)[ ]*/\\1 /' > reports/TODO.txt",
+    "start": "node scripts/node.js",
     "test": "mocha tests"
   },
   "repository": {
@@ -21,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/GoonCitizen/star-citizen-live/issues"
   },
-  "homepage": "https://github.com/GoonCitizen/star-citizen-live#readme"
+  "homepage": "https://github.com/GoonCitizen/star-citizen-live#readme",
+  "dependencies": {
+    "@fabric/hub": "FabricLabs/hub.fabric.pub#feature/sensemaker"
+  }
 }
