--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "homepage": "https://github.com/GoonCitizen/star-citizen-live#readme",
   "dependencies": {
     "@fabric/hub": "FabricLabs/hub.fabric.pub#feature/sensemaker",
-    "tail": "=2.2.6",
-    "windows-ss": "=1.0.1-xx"
+    "screenshot-desktop": "^1.15.1",
+    "tail": "=2.2.6"
   },
   "devDependencies": {
     "jsdoc-to-markdown": "=9.0.5"
